# cua-memory-benchmark

./: .gitignore  README.md  main.py  pyproject.toml  run_gemini.py  run_ollama.py  run_openai.py
app/: __init__.py
app/routes/: home.py  shop.py  spreadsheet.py
app/templates/: home.html  landing.html
app/templates/shop/: cart.html  index.html  product.html
app/templates/spreadsheet/: index.html
app/utils/: log_utils.py
mock_amazon/: app.py
mock_amazon/data/: products.json
mock_amazon/templates/: cart.html  index.html  product.html
mock_excel/: app.py
mock_excel/templates/: index.html
scripts/: download_images.py  run_all.py  run_anthropic.py  run_browseruse.py  run_browseruse_memory.py  run_gemini_gui.py  run_gemini_list.py  run_ollama.py  run_openai.py
