[project]
name = "cua-memory-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
        "browser-use[memory]>=0.1.43",
        "duckduckgo-search>=8.0.1",
        "flask>=3.1.0",
        "langchain-ollama",
        "playwright",
]
